# fast_api_project

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 56f5c4e92288_fix.py  57a3c685ddaa_initial_migration.py  5c66673e875a_rename_attachment_field.py  67fa25ffc7e5_fix.py  74b3b11d5245_apikey_fix.py  c420ec2211b6_creating_preliminary_models.py  c565eae589f4_fix.py  eed16c409253_init.py
manage_utils/: create_user.py  decision_center.py  utils.py
my_twitter/: main.py  main_debug.py  manage.py  settings.py
my_twitter/app/: app.py  errors.py
my_twitter/app/application/: classes.py  exception_handlers.py  factory_function.py  lifespan.py
my_twitter/app/database/: database.py  docker-compose.yaml  models.py
my_twitter/app/database/DB_docker_for_debug/: docker-compose.yaml
my_twitter/app/database/models/: __init__.py  attachment.py  base.py  like.py  subscriptions.py  tweet.py  user.py
my_twitter/app/manage_utils/: classes.py  commands.py  decision_center.py  utils.py
my_twitter/app/models/: user.py
my_twitter/app/routers/: exception_handlers.py  medias.py  routers.py  static_html.py  tweets.py  users.py
my_twitter/app/routers/app_routers/: exception_routers.py  medias.py  tweets.py  users.py
my_twitter/app/routers/app_routers/schemas/: likes.py  medias.py  tweets.py  (+1 more)
my_twitter/app/routers/schemas/: like.py  medias.py  tweet.py  user.py
my_twitter/app/settings/: classes.py  settings.py
my_twitter/app/utils/: api_key.py  dependencies.py  exception_handler.py  file_manager.py  lifespan.py  utils.py
my_twitter/tests/: conftest.py  pytest.ini  utils.py
my_twitter/tests/tests/: test_api_medias.py  test_api_tweets.py  test_api_users.py  test_models.py
my_twitter/tests/tests/tests_api_medias/: test_route_api_medias.py
my_twitter/tests/tests/tests_api_tweets/: test_all_tweets.py  test_delete_tweet.py  test_dislike_tweet.py  test_like_tweet.py  test_tweet_create.py
my_twitter/tests/tests/tests_api_users/: test_delete_a_subscription.py  test_information_about_the_current_user.py  test_information_about_the_user_by_id.py  test_subscription.py
my_twitter/tests/tests/tests_models/: test_add_attachment.py  test_add_like.py  test_add_subscription.py  test_add_tweet.py  test_create_user.py  test_delete_tweet.py  test_delete_user.py  test_subscriber.py
nginx/: nginx.conf
tests/: conftest.py  pytest.ini  settings.py  test_manage_func.py  test_models.py  test_static.py
tests/tests_routes/: test_api_medias.py  test_api_tweets.py  test_api_users.py
